Fix a bug where the Google Maps iframe was not centered vertically

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -13,17 +13,18 @@
 #map {
   max-width: 25rem;
   margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  max-height: 100%;
 }
 
-#map > div {
-  height: 100%;
-  position: relative; 
-  
+.aspect-ratio-box {
   position: relative;
-  margin: auto;
+  margin: 0 auto;
   
-  width: 80%;
   /* 40:29 Aspect Ratio */
+  width: 80%;
   padding-top: calc((29/40) * 80%);
   
   @media (min-width: 576px) {
@@ -32,7 +33,7 @@
   }
 }
 
-#map > div > iframe {
+.aspect-ratio-box > iframe {
   width: 100%;
   height: 100%;
   position: absolute; 
